--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "stylus-loader": "^7.0.0",
     "thread-loader": "^3.0.4",
     "webpack": "^5.74.0",
+    "webpack-bundle-analyzer": "^4.6.1",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.10.1"
   },
